--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -2,11 +2,16 @@
 #profilePic {
   width: 30%;
   height: 80%;
-  padding: 1px;
-  background-color: black;
   margin-bottom: 20px;
-  
 }
+
+#about-me {
+  display: flex;
+justify-content: flex-start;
+font-family: 'Varela Round', sans-serif;
+
+}
+
 section {
   width: 100%;
   margin: 2rem;
