--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -2,14 +2,48 @@ body {
     background: dimgray !important;
   }
   .form {
-    margin: 20px;
+    margin: 20px 200px 20px 200px;
     font-family: 'Varela Round', sans-serif;
-
+    
+    
+  }
+  #guestName {
+    text-align: center;
   }
   
   .form input {
+
     display: block;
     margin-top: 5px;
     margin-bottom: 5px;
     width: 100%;
+  }
+
+  .formBox {
+    border-radius: 2px;
+    border-color: aliceblue;
+    border: none;
+    border-radius: 8px;;
+    
+  }
+
+  input{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+  }
+
+  #submit {
+    width: 100%;
+    height: 50px;
+    border-radius: 10px;
+  }
+
+  #message {
+    height: 100px;
+  }
+
+  #error {
+    text-align: center;
   }
