--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -2,7 +2,8 @@
 #profilePic {
   width: 30%;
   height: 80%;
-  margin-bottom: 20px;
+  margin: 20px;
+  margin-top: 0px !important;
 }
 
 #about-me {
@@ -11,6 +12,7 @@ justify-content: flex-start;
 font-family: 'Varela Round', sans-serif;
 inline-size: 100%;
 overflow-wrap: break-word;
+margin-right: 20px;
 }
 
 section {
@@ -20,9 +22,9 @@ section {
 }
 
 .details {
-  font-size: 34px;
-  /* margin: 2rem;
-  padding: 0.5rem; */
+  display: flex;
+  justify-content: space-between;
+
 }
 
 #githubLogo {
@@ -43,6 +45,13 @@ p {
   min-width: 425px;
   max-width: 100%;
 }
+
+.ratio {
+  width: 10%;
+  margin: 30px 0; 
+}
+
+
 
 @media screen and (min-width: 768px) {
   /* on tablets, set columns to only be 50% of the width and not grow */
