made stylistic changes

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,5 +1,5 @@
 body {
-    background: dimgray !important;
+    background: rgb(153, 153, 156) !important;
   }
   .form {
     margin: 20px 200px 20px 200px;
