--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,18 +1,18 @@
-
 #profilePic {
-  width: 30%;
-  height: 80%;
+  width: 20vw;
+  height: 60%;
   margin: 20px;
   margin-top: 0px !important;
+  border-radius: 20px;
 }
 
 #about-me {
   display: flex;
-justify-content: flex-start;
-font-family: 'Varela Round', sans-serif;
-inline-size: 100%;
-overflow-wrap: break-word;
-margin-right: 20px;
+  justify-content: flex-start;
+  font-family: "Varela Round", sans-serif;
+  inline-size: 100%;
+  overflow-wrap: break-word;
+  margin-right: 20px;
 }
 
 section {
@@ -24,16 +24,13 @@ section {
 .details {
   display: flex;
   justify-content: space-between;
-
 }
 
 #githubLogo {
-  width: 10%
-  
+  width: 10%;
 }
 #linkedinLogo {
-  width: 11%
-  
+  width: 11%;
 }
 
 .logo {
@@ -48,16 +45,28 @@ p {
 
 .ratio {
   width: 10%;
-  margin: 30px 0; 
+  margin: 30px 0;
 }
 
+@media screen and (min-width: 360px) {
+  /* on tablets, set columns to only be 50% of the width and not grow */
+  #about-me {
+    flex: 0 0 100%;
+    /* max-width: 50%; */
+   
+  }
 
+  /* select the last child to grow to full width if it has space to grow */
+  .card-column:last-child {
+    flex-grow: 1;
+  }
+}
 
 @media screen and (min-width: 768px) {
   /* on tablets, set columns to only be 50% of the width and not grow */
-  .card-column {
-    flex: 0 0 50%;
-    max-width: 50%;
+  #about-me {
+    flex: 0 0 100%;
+    /* max-width: 50%; */
   }
 
   /* select the last child to grow to full width if it has space to grow */
