--- a/src/styles/Resume.css
+++ b/src/styles/Resume.css
@@ -1,3 +1,8 @@
 #resume{
     padding: 0 100px 0 100px;
 }
+
+#resume-link:hover {
+    color: ;
+    text-shadow: 1px 1px 2px rgb(236, 236, 236), 0 0 1em rgb(166, 166, 212), 0 0 0.2em blue;
+  }
