changes to navbar

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -24,6 +24,8 @@ section {
 .details {
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
 }
 
 #githubLogo {
