--- a/src/styles/Portfolio.css
+++ b/src/styles/Portfolio.css
@@ -76,6 +76,7 @@ img {
   position: relative;
 }
 .card-title {
+  /* width: 50%; */
   position: absolute;
   color: azure;
   background: rgba(0, 0, 0, 0.5);
@@ -86,12 +87,13 @@ img {
   text-align: center;
   border-radius: 0 10px 10px 0;
   font-family: "Varela Round", sans-serif;
-  width: 50%;
 }
 
 #card-three {
 }
-
+a.gitLink {
+  width: 50%;
+}
 .card-title:hover {
   background: rgba(0, 0, 0, 0.25);
 }
@@ -116,15 +118,21 @@ img {
   .card-column {
     flex: 0 0 100%;
 
-    max-width: 50%;
+    /* max-width: 50%; */
   }
+  /* .card-title {
+        max-width: 50%;
+  } */
 }
 @media screen and (min-width:375px) {
   .card-column{
-    flex: 0 0 100%;
+    /* flex: 0 0 100%; */
 
-    max-width: 50%;
+    /* max-width: 50%; */
   }
+  /* .card-title {
+    max-width: 50%;
+} */
 }
 /* media query for larger screens */
 @media screen and (min-width: 992px) {
@@ -132,4 +140,7 @@ img {
   .card-column {
     flex: 0 0 50%;
   }
+  /* .card-title {
+    max-width: 50%;
+} */
 }
