--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -9,16 +9,22 @@
 #about-me {
   display: flex;
   justify-content: flex-start;
-  font-family: "Varela Round", sans-serif;
+  /* font-family: "Varela Round", sans-serif; */
   inline-size: 100%;
   overflow-wrap: break-word;
   margin-right: 20px;
+  color: white;
+  background-color: #141314;
+  padding: 2rem;
+  border-radius: 2rem;
+  opacity: 0.90;
 }
 
 section {
   width: 100%;
   margin: 2rem;
   align-items: center;
+  /* max-width: 80%; */
 }
 
 .details {
@@ -40,9 +46,9 @@ section {
 }
 
 p {
-  font-size: 20px;
-  min-width: 425px;
-  max-width: 100%;
+  /* font-size: 2rem; */
+  /* min-width: 425px; */
+  /* max-width: 100%; */
 }
 
 .ratio {
@@ -53,7 +59,7 @@ p {
 @media screen and (min-width: 360px) {
   /* on tablets, set columns to only be 50% of the width and not grow */
   #about-me {
-    flex: 0 0 100%;
+    flex: 0 0 50%;
     /* max-width: 50%; */
    
   }
@@ -67,7 +73,7 @@ p {
 @media screen and (min-width: 768px) {
   /* on tablets, set columns to only be 50% of the width and not grow */
   #about-me {
-    flex: 0 0 100%;
+    flex: 0 0 50%;
     /* max-width: 50%; */
   }
 
