--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,49 +1,83 @@
 body {
-    background: rgb(153, 153, 156) !important;
-  }
-  .form {
-    margin: 20px 200px 20px 200px;
-    font-family: 'Varela Round', sans-serif;
-    
-    
-  }
-  #guestName {
-    text-align: center;
-  }
-  
-  .form input {
+  background: rgb(153, 153, 156) !important;
+}
+.form {
+  font-family: "Varela Round", sans-serif;
+}
 
-    display: block;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    width: 100%;
-  }
+#contact-wrapper {
+/* width: 80%; */
+display: flex;
+justify-content: center;
+flex-direction: column;
+}
+#guestName {
+  text-align: center;
+  color: white;
+  /* background-color: #141314; */
+}
 
-  .formBox {
-    border-radius: 2px;
-    border-color: aliceblue;
-    border: none;
-    border-radius: 8px;;
-    
-  }
+.form input {
+  display: block;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  width: 100%;
+}
 
-  input{
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-  }
+.formBox {
+  border-radius: 2px;
+  border-color: aliceblue;
+  border: none;
+  border-radius: 8px;
+}
 
-  #submit {
-    width: 100%;
-    height: 50px;
-    border-radius: 10px;
-  }
+input {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
 
-  #message {
-    height: 100px;
-  }
+#submit {
+  width: 100%;
+  height: 50px;
+  border-radius: 10px;
+}
 
-  #error {
-    text-align: center;
+#message {
+  height: 100px;
+}
+
+#error {
+  text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+  .contact-wrapper {
+    flex: 0 0 100%;
+
+    /* max-width: 50%; */
   }
+  /* .card-title {
+          max-width: 50%;
+    } */
+}
+@media screen and (min-width: 375px) {
+  .contact-wrapper {
+    /* flex: 0 0 100%; */
+
+    /* max-width: 50%; */
+  }
+  /* .card-title {
+      max-width: 50%;
+  } */
+}
+/* media query for larger screens */
+@media screen and (min-width: 992px) {
+  .contact-wrapper {
+    flex: 0 0 50%;
+  }
+  /* .card-title {
+      max-width: 50%;
+  } */
+}
