--- a/src/styles/Container.css
+++ b/src/styles/Container.css
@@ -2,3 +2,47 @@ body {
     background: rgb(225, 225, 225);
     /* position: relative; */
 }
+#big-wrapper {
+  position: relative;
+  width: 100%;
+  z-index: 1000;
+}
+
+#about-me {
+    position: relative;
+    z-index: 1000;
+}
+
+#portfolio {
+    position: relative;
+    z-index: 1000;
+}
+
+#resumePage {
+    position: relative;
+    z-index: 1000;
+}
+
+#contact {
+    position: relative;
+    z-index: 1000;
+}
+
+
+#footer {
+    position: relative;
+    width: 100%;
+    z-index: 1000;
+}
+
+
+
+
+#tsparticles {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 500;
+  }
