--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -19,7 +19,7 @@ body {
 .header {
   max-width:70%;
   font-family: 'Varela Round', sans-serif;
-  background-color: rgb(14, 9, 28);
+  background-color: #141314;
   border-radius: 20px;
   margin-top:10px;
   
